# src/Organization/GetOrganizationHandler.php
@@ -1,0 +1,25 @@
+<?php
+
+declare(strict_types=1);
+
+namespace NenePayout\Organization;
+
+use Nene2\Http\JsonResponseFactory;
+use Psr\Http\Message\ResponseInterface;
+use Psr\Http\Message\ServerRequestInterface;
+
+final readonly class GetOrganizationHandler
+{
+    public function __construct(
+        private GetOrganizationUseCaseInterface $useCase,
+        private JsonResponseFactory $response,
+    ) {
+    }
+
+    public function handle(ServerRequestInterface $request): ResponseInterface
+    {
+        $organization = $this->useCase->execute();
+
+        return $this->response->create(OrganizationResponse::toArray($organization));
+    }
+}
